Change navigation icon colors and add comments

--- a/app/src/main/res/layout/main_activity.xml
+++ b/app/src/main/res/layout/main_activity.xml
@@ -7,17 +7,22 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
+    <!--
+    Bottom navigation attributes
+    -->
     <FrameLayout
+        android:id="@id/container"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@id/container"/>
-    
+        android:layout_height="match_parent" />
+
     <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:id="@+id/bottomNavigation"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/bottomNavigation"
         android:layout_alignParentBottom="true"
         android:background="?android:attr/windowBackground"
-        app:menu="@menu/menu"/>
+        app:itemIconTint="@drawable/tab_color"
+        app:itemTextColor="@drawable/tab_color"
+        app:menu="@menu/menu" />
 
 </RelativeLayout>
