--- a/app/src/main/res/layout/main_fragment.xml
+++ b/app/src/main/res/layout/main_fragment.xml
@@ -140,15 +140,43 @@
                 android:textColor="#000"
                 android:textSize="16dp"
                 android:layout_margin="10dp"
-                android:text="Country Cases" />
+                android:text="Local Cases"/>
 
             <ListView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:id="@+id/country_list_view">
+                android:id="@+id/local_cases">
             </ListView>
 
         </LinearLayout>
 
     </androidx.cardview.widget.CardView>
+
+<!--    <androidx.cardview.widget.CardView-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_margin="5dp">-->
+
+<!--        <LinearLayout-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:orientation="vertical">-->
+
+<!--            <TextView-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:textColor="#000"-->
+<!--                android:textSize="16dp"-->
+<!--                android:layout_margin="10dp"-->
+<!--                android:text="Country Cases" />-->
+
+<!--            <ListView-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:id="@+id/country_list_view">-->
+<!--            </ListView>-->
+
+<!--        </LinearLayout>-->
+
+<!--    </androidx.cardview.widget.CardView>-->
 </LinearLayout>
