--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -4,7 +4,7 @@ Create bottom navigation objects
 -->
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
-        android:id="@+id/global"
+        android:id="@+id/home"
         android:icon="@drawable/ic_baseline_home_24"
         android:title="Home" />
     <item
