Here is my code review.

--- a/app/src/main/res/layout/fragment_by_country.xml
+++ b/app/src/main/res/layout/fragment_by_country.xml
@@ -15,9 +15,9 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Country Cases"
+            android:text="@string/country_fragment_country_cases"
             android:textStyle="bold"
-            android:textSize="20dp"
+            android:textSize="20sp"
             android:textColor="#FFF"
             android:gravity="center"/>
 
