--- a/app/src/main/res/layout/country_list_view_layout.xml
+++ b/app/src/main/res/layout/country_list_view_layout.xml
@@ -12,7 +12,7 @@
         android:layout_height="wrap_content"
         android:id="@+id/list_country"
         android:textStyle="bold"
-        android:textSize="20dp"/>
+        android:textSize="20sp"/>
 
     <TextView
         android:layout_width="wrap_content"
