--- a/app/src/main/res/layout/main_fragment.xml
+++ b/app/src/main/res/layout/main_fragment.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -17,9 +16,9 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Home"
+            android:text="@string/home_main_fragment"
             android:textStyle="bold"
-            android:textSize="20dp"
+            android:textSize="20sp"
             android:textColor="#FFF"
             android:gravity="center"/>
 
@@ -47,9 +46,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="#000"
-            android:textSize="16dp"
+            android:textSize="16sp"
             android:layout_margin="10dp"
-            android:text="Overview" />
+            android:text="@string/main_fragment_overview" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -68,13 +67,13 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_margin="10dp"
-                    android:text="Confirmed"
+                    android:text="@string/main_fragment_confirmed"
                     android:textColor="#000"/>
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="0"
+                    android:text="@string/main_fragment_zero"
                     android:id="@+id/confirmed_num"/>
 
             </LinearLayout>
@@ -89,13 +88,13 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_margin="10dp"
-                    android:text="Recovered"
+                    android:text="@string/main_fragment_recovered"
                     android:textColor="#000"/>
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="0"
+                    android:text="@string/main_fragment_zero"
                     android:id="@+id/recovered_num"/>
 
             </LinearLayout>
@@ -110,13 +109,13 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_margin="10dp"
-                    android:text="Deaths"
+                    android:text="@string/main_fragment_Deaths"
                     android:textColor="#000"/>
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="0"
+                    android:text="@string/main_fragment_zero"
                     android:id="@+id/deaths_num"/>
 
             </LinearLayout>
@@ -138,9 +137,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textColor="#000"
-                android:textSize="16dp"
+                android:textSize="16sp"
                 android:layout_margin="10dp"
-                android:text="Local Cases"/>
+                android:text="@string/main_fragment_local_cases"/>
 
             <ListView
                 android:layout_width="match_parent"
