--- a/app/src/main/res/layout/news_list_view_layout.xml
+++ b/app/src/main/res/layout/news_list_view_layout.xml
@@ -2,6 +2,7 @@
 
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:padding="5dp"
@@ -10,13 +11,15 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        tools:ignore="UselessParent">
 
         <ImageView
             android:layout_width="100dp"
             android:layout_height="100dp"
             android:id="@+id/news_image"
-            android:layout_marginRight="10dp"/>
+            android:layout_marginEnd="10dp"
+            android:contentDescription="@string/news_image" />
 
         <LinearLayout
             android:layout_width="wrap_content"
