--- a/app/src/main/res/layout/main_fragment.xml
+++ b/app/src/main/res/layout/main_fragment.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -17,9 +16,9 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Home"
+            android:text="home"
             android:textStyle="bold"
-            android:textSize="20dp"
+            android:textSize="20sp"
             android:textColor="#FFF"
             android:gravity="center"/>
 
@@ -31,10 +30,13 @@
         android:layout_margin="5dp">
 
         <com.github.mikephil.charting.charts.BarChart
+            android:id="@+id/by_country_bar_graph"
             android:layout_width="match_parent"
             android:layout_height="200dp"
             android:layout_margin="5dp"
-            android:id="@+id/by_country_bar_graph"/>
+            android:clickable="true"
+            android:onClick="barChartFragment"
+            tools:ignore="OnClick" />
 
     </androidx.cardview.widget.CardView>
 
@@ -47,9 +49,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="#000"
-            android:textSize="16dp"
+            android:textSize="16sp"
             android:layout_margin="10dp"
-            android:text="Overview" />
+            android:text="overview" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -68,7 +70,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_margin="10dp"
-                    android:text="Confirmed"
+                    android:text="confirmed"
                     android:textColor="#000"/>
 
                 <TextView
@@ -89,7 +91,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_margin="10dp"
-                    android:text="Recovered"
+                    android:text="recovered"
                     android:textColor="#000"/>
 
                 <TextView
@@ -110,7 +112,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_margin="10dp"
-                    android:text="Deaths"
+                    android:text="deaths"
                     android:textColor="#000"/>
 
                 <TextView
@@ -138,7 +140,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textColor="#000"
-                android:textSize="16dp"
+                android:textSize="16sp"
                 android:layout_margin="10dp"
                 android:text="Local Cases"/>
 
