--- a/app/src/main/res/layout/main_fragment.xml
+++ b/app/src/main/res/layout/main_fragment.xml
@@ -141,53 +141,38 @@
                 android:layout_margin="10dp"
                 android:text="@string/main_fragment_local_cases"/>
 
-            <ListView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:id="@+id/local_cases">
-            </ListView>
+            <TextView
+                android:id="@+id/error_location"
+                android:layout_width="wrap_content"
+                android:layout_height="0dp" />
+
+            <TextView
+                android:id="@+id/user_location"
+                android:layout_width="wrap_content"
+                android:layout_height="0dp" />
+
+            <TextView
+                android:id="@+id/user_local_total"
+                android:layout_width="wrap_content"
+                android:layout_height="0dp" />
+
+            <TextView
+                android:id="@+id/user_local_positive"
+                android:layout_width="wrap_content"
+                android:layout_height="0dp" />
+
+            <TextView
+                android:id="@+id/user_local_deaths"
+                android:layout_width="wrap_content"
+                android:layout_height="0dp" />
+
+            <TextView
+                android:id="@+id/user_local_hospitalized"
+                android:layout_width="wrap_content"
+                android:layout_height="0dp" />
 
         </LinearLayout>
 
     </androidx.cardview.widget.CardView>
 
-    <TextView
-        android:id="@+id/lblLatitudeValue"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Latitude" />
-
-    <TextView
-        android:id="@+id/lblLongitudeValue"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Longitude" />
-
-    <!--    <androidx.cardview.widget.CardView-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:layout_margin="5dp">-->
-
-<!--        <LinearLayout-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:orientation="vertical">-->
-
-<!--            <TextView-->
-<!--                android:layout_width="wrap_content"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                android:textColor="#000"-->
-<!--                android:textSize="16dp"-->
-<!--                android:layout_margin="10dp"-->
-<!--                android:text="Country Cases" />-->
-
-<!--            <ListView-->
-<!--                android:layout_width="match_parent"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                android:id="@+id/country_list_view">-->
-<!--            </ListView>-->
-
-<!--        </LinearLayout>-->
-
-<!--    </androidx.cardview.widget.CardView>-->
 </LinearLayout>
